Adjust overlapping of stop map buttons

--- a/apps/bus_detective_web/assets/css/components/map.scss
+++ b/apps/bus_detective_web/assets/css/components/map.scss
@@ -19,7 +19,7 @@
 .map__toggle-expanded {
   position: absolute;
   display: block;
-  top: 10px;
+  top: 60px;
   right: 10px;
   color: $bd-gray;
   z-index: 500;
